--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jest-image-snapshot": "^4.1.0",
     "jest-puppeteer": "^4.3.0",
     "less-loader": "^5.0.0",
+    "material-ui-dropzone": "^3.5.0",
     "mini-css-extract-plugin": "^0.7.0",
     "puppeteer": "^1.17.0",
     "react-collapsible": "^2.3.1",
