--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -192,7 +192,7 @@ jobs:
       - name: Stop VFB server   
         run: docker stop testServer
       - uses: actions/upload-artifact@v2
-        if: ${{ success() }}
+        if: ${{ failure() }}
         with:
           name: test_fails
           path: |
