--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@babel/runtime": "^7.4.5",
     "@babel/plugin-transform-runtime": "^7.4.5",
     "@geppettoengine/geppetto-client": "file:./geppetto-client",
-    "@material-ui/icons": "4.0.0",
+    "@material-ui/icons": "^4.0.0",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@types/react-rnd": "^8.0.0",
     "axios": "^0.19.2",
