--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "puppeteer": "^1.17.0",
     "react-collapsible": "^2.3.1",
     "react-color": "^2.17.3",
-    "react-tabs": "3.0.0",
+    "react-tabs": "^3.0.0",
     "react-redux": "^7.0.3",
     "redux": "^4.0.1",
     "style-loader": "^0.13.2",
