--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@babel/runtime": "^7.4.5",
     "@babel/plugin-transform-runtime": "^7.4.5",
     "@geppettoengine/geppetto-client": "file:./geppetto-client",
-    "@material-ui/icons": "3.0.1",
+    "@material-ui/icons": "^4.0.0",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@types/react-rnd": "^8.0.0",
     "axios": "^0.19.2",
@@ -46,7 +46,7 @@
     "puppeteer": "^1.17.0",
     "react-collapsible": "^2.3.1",
     "react-color": "^2.17.3",
-    "react-tabs": "3.0.0",
+    "react-tabs": "^3.2.3",
     "react-redux": "^7.0.3",
     "redux": "^4.0.1",
     "style-loader": "^0.13.2",
