--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,9 @@ on:
   push:
     branches: '**'
     tags: 'v*'
+  workflow_run:
+    workflows: [Build]
+    types: [completed]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
