--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,9 @@ on:
   push:
     branches: '**'
     tags: 'v*'
+  pull_request:
+    branches: '**'
+  workflow_dispatch:
   workflow_run:
     workflows: [Build]
     types: [completed]
