--- a/.github/workflows/process_xmi.yml
+++ b/.github/workflows/process_xmi.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install lxml requests html nbformat
+        pip install lxml requests nbformat
 
     - name: Process XMI File and Update README
       run: |
