--- a/.github/workflows/process_xmi.yml
+++ b/.github/workflows/process_xmi.yml
@@ -45,5 +45,6 @@ jobs:
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git add model/*.md
+        git add model/queries_execution_notebook.ipynb
         git commit -m "Update README with XMI structure and query breakdowns" || echo "No changes to commit"
         git push
