Adding L1EM template for uploads

--- a/components/configuration/VFBUploader/configuration.json
+++ b/components/configuration/VFBUploader/configuration.json
@@ -1,7 +1,7 @@
 {
 	"nblastURL" : "https://upload.virtualflybrain.org/files/UNIQUE_ID?token=bec3a40f0ab377c39103",
 	"contentType" : "multipart/form-data",
-	"templates" : [{"short_form":"VFB_00101567","label":"JRC2018Unisex"},{"short_form":"VFB_00200000","label":"JRC2018UnisexVNC"}] ,
+	"templates" : [{"short_form":"VFB_00101567","label":"JRC2018Unisex"},{"short_form":"VFB_00200000","label":"JRC2018UnisexVNC"},{"short_form":"VFB_00500000","label":"L1EM"}] ,
 	"acceptedFiles" : [".swc", ".nrrd"],
 	"filesLimit" : 1,
 	"maxFileSize" : 5242880,
