--- a/package.json
+++ b/package.json
@@ -99,8 +99,18 @@
     "three/webgpu": "three/src/renderers/webgpu/WebGPURenderer"
   },
   "browser": {
-    "three/examples/js/shaders/FocusShader": "./node_modules/three/examples/jsm/shaders/FocusShader.js",
-    "three/webgpu": "./node_modules/three/examples/jsm/renderers/webgpu/WebGPURenderer.js"
+    "three/webgpu": "./node_modules/three/examples/jsm/renderers/webgpu/WebGPURenderer.js",
+    "three/examples/js/loaders/ColladaLoader": "./node_modules/three/examples/jsm/loaders/ColladaLoader.js",
+    "three/examples/js/postprocessing/BloomPass": "./node_modules/three/examples/jsm/postprocessing/BloomPass.js",
+    "three/examples/js/postprocessing/EffectComposer": "./node_modules/three/examples/jsm/postprocessing/EffectComposer.js",
+    "three/examples/js/postprocessing/FilmPass": "./node_modules/three/examples/jsm/postprocessing/FilmPass.js",
+    "three/examples/js/postprocessing/MaskPass": "./node_modules/three/examples/jsm/postprocessing/MaskPass.js",
+    "three/examples/js/postprocessing/RenderPass": "./node_modules/three/examples/jsm/postprocessing/RenderPass.js",
+    "three/examples/js/postprocessing/ShaderPass": "./node_modules/three/examples/jsm/postprocessing/ShaderPass.js",
+    "three/examples/js/shaders/ConvolutionShader": "./node_modules/three/examples/jsm/shaders/ConvolutionShader.js",
+    "three/examples/js/shaders/CopyShader": "./node_modules/three/examples/jsm/shaders/CopyShader.js",
+    "three/examples/js/shaders/FilmShader": "./node_modules/three/examples/jsm/shaders/FilmShader.js",
+    "three/examples/js/shaders/FocusShader": "./node_modules/three/examples/jsm/shaders/FocusShader.js"
   },
   "buildOptions": {
     "emitEntryPoint": true,
