--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Virtual_Fly_Brain",
+  "name": "virtual_fly_brain",
   "version": "1.0.0",
   "description": "A hub for Drosophila melanogaster neural anatomy and imaging data.",
   "repository": "http://git.geppetto.org",
