--- a/package.json
+++ b/package.json
@@ -23,17 +23,23 @@
     "**/three": "0.167.0",
     "three-render-objects": "1.29.4",
     "**/three-render-objects": "1.29.4",
-    "three-forcegraph": "1.41.14"
+    "three-forcegraph": "1.41.14",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0"
   },
   "overrides": {
     "three": "0.167.0",
     "**/three": "0.167.0",
     "three-render-objects": "1.29.4",
-    "three-forcegraph": "1.41.14"
+    "three-forcegraph": "1.41.14",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0"
   },
   "dependencies": {
     "three": "0.167.0",
     "@types/three": "0.167.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "@babel/core": "^7.4.5",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/preset-env": "^7.4.5",
@@ -41,10 +47,11 @@
     "@babel/runtime": "^7.4.5",
     "@babel/plugin-transform-runtime": "^7.4.5",
     "@geppettoengine/geppetto-client": "openworm/geppetto-client#VFBv2.2.5",
+    "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.0.0",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@types/react-rnd": "^8.0.0",
-    "axios": "^0.19.2",
+    "axios": "^0.21.4",
     "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^3.0.0",
@@ -74,8 +81,8 @@
     "@babel/preset-stage-2": "^7.0.0",
     "@types/jasmine": "^2.8.8",
     "@types/material-ui": "^0.21.5",
-    "@types/react": "^16.4.9",
-    "@types/react-dom": "^16.0.7",
+    "@types/react": "^16.14.0",
+    "@types/react-dom": "^16.14.0",
     "awesome-typescript-loader": "^5.2.1",
     "babel-eslint": "^10.0.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
