--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -203,13 +203,26 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
 
-      - name: Install Test Dependencies
+      - name: Setup package.json and install dependencies
         run: |
-          # Create minimal package.json just for testing
-          echo '{
-            "name": "vfb-testing",
-            "private": true
-          }' > package.json
+          # Create package.json if it doesn't exist
+          if [ ! -f package.json ]; then
+            echo '{
+              "name": "vfb-testing",
+              "version": "1.0.0",
+              "private": true,
+              "resolutions": {
+                "three": "0.115.0"
+              },
+              "overrides": {
+                "three": "0.115.0"
+              }
+            }' > package.json
+          else
+            # Add resolutions to existing package.json
+            npm pkg set resolutions.three="0.115.0"
+            npm pkg set overrides.three="0.115.0"
+          fi
 
       - name: Install Chrome dependencies
         run: |
