--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@types/react-rnd": "^8.0.0",
     "axios": "^0.19.2",
+    "acorn": "8.12.1",
+    "canvas": "2.11.1",
+    "three": "0.163.0",
     "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^3.0.0",
