Fixing version of three-render-objects to 1.29.4

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "acorn": "8.12.1",
     "canvas": "2.11.1",
     "three": "0.163.0",
+    "three-render-objects": "1.29.4",
     "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^3.0.0",
