--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "start": "node --max_old_space_size=2048 node_modules/webpack-dev-server/bin/webpack-dev-server.js --progress  --config webpack.config.dev.js"
   },
   "dependencies": {
-    "@babel/core": "7.24.3",
-    "@babel/plugin-proposal-class-properties": "7.24.3",
-    "@babel/preset-env": "7.24.3",
-    "@babel/preset-react": "7.24.3",
-    "@babel/runtime": "7.24.3",
-    "@babel/plugin-transform-runtime": "7.24.3",
+    "@babel/core": "7.24.x",
+    "@babel/plugin-proposal-class-properties": "7.24.x",
+    "@babel/preset-env": "7.24.x",
+    "@babel/preset-react": "7.24.x",
+    "@babel/runtime": "7.24.x",
+    "@babel/plugin-transform-runtime": "7.24.x",
     "@geppettoengine/geppetto-client": "file:./geppetto-client",
     "@material-ui/icons": "^4.0.0",
     "@material-ui/lab": "^4.0.0-alpha.57",
@@ -34,7 +34,7 @@
     "canvas": "2.11.1",
     "three": "0.163.0",
     "three-render-objects": "1.29.4",
-    "babel-loader": "7.24.3",
+    "babel-loader": "7.24.x",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^3.0.0",
     "exports-loader": "^0.6.3",
