reducing version of three-render-objects

--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@types/react-rnd": "^8.0.0",
     "axios": "^0.19.2",
-    "acorn": "8.12.1",
+    "acorn": "^6.0.0",
     "canvas": "2.11.1",
     "three": "0.163.0",
-    "three-render-objects": "1.28.x",
+    "three-render-objects": "1.27.x",
     "babel-loader": "8.2.x",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^3.0.0",
